--- a/aula_minicurso.ipynb
+++ b/aula_minicurso.ipynb
@@ -548,7 +548,7 @@
     "\n",
     "Nesta seção final do nosso minicurso de \"Introdução à Programação em Python\", chegou a hora de colocar em prática todo o conhecimento adquirido. Vamos mergulhar de cabeça na construção de um projeto prático empolgante: uma calculadora interativa.\n",
     "\n",
-    "Ao longo das nossas aulas, você explorou os princípios fundamentais da programação, desde os conceitos iniciais até as estruturas de decisão e loops. Agora, é o momento de unir esses conhecimentos para criar uma aplicação real.\n",
+    "Ao longo da nossa aula, você explorou os princípios fundamentais da programação, desde os conceitos iniciais até as estruturas de decisão e loops. Agora, é o momento de unir esses conhecimentos para criar uma aplicação real.\n",
     "\n",
     "Neste projeto, você terá a oportunidade de desenvolver uma calculadora versátil que permitirá a realização de operações matemáticas básicas, como soma, subtração, multiplicação e divisão. Além disso, você aplicará as estruturas de controle que aprendeu para garantir que a calculadora funcione de maneira suave e eficaz.\n",
     "\n",
